# stock-counter-backend

./: .dockerignore  .gitignore  Dockerfile  Dockerfile_forpostgres  README.md  cert.pem  django.Dockerfile  docker-compose.yml  entrypoint.sh  example.env  key.pem  manage.py  package-lock.json  postgres.Dockerfile  pyproject.toml  setup.cfg
dashboard/: enums.py  models.py  serializers.py  urls.py  views.py  widgets.py
dashboard/migrations/: 0001_initial.py  0002_remove_subscribedwidget_user_given_name_and_more.py  (+1 more)
goktugv2/: asgi.py  settings.py  urls.py  wsgi.py
inventory/: admin.py  apps.py  bulk_urls.py  bulkviews.py  models.py  schemas.py  serializers.py  signals.py  urls.py  views.py
invoice/: admin.py  apps.py  bulk_urls.py  bulkviews.py  models.py  serializer_helpers.py  serializers.py  signals.py  urls.py  views.py
invoice/tests/: test_views.py
payments/: apps.py  bulk_urls.py  bulkviews.py  models.py  serializers.py  signals.py  urls.py  views.py
stakeholder/: admin.py  apps.py  bulk_urls.py  bulkviews.py  models.py  serializers.py  signals.py  urls.py  views.py
stockcounter/: asgi.py  settings.py  urls.py  wsgi.py
users/: admin.py  apps.py  authentication.py  bulk_urls.py  bulkviews.py  knox_extensions.py  knox_serializers.py  knoxviews.py  models.py  serializers.py  tests.py  urls.py  views.py
utilities/: autoschema.py  bulkviewmixins.py  caches.py  common_model_mixins.py  enums.py  exception_handler.py  filters.py  middleware.py  routers.py  serializer_helpers.py  serializermixins.py  serializers.py  signals.py  tag_creator.py  validators.py
(+45 files in other folders)
